test/zmod14.slq
// args: --run

def main(){
	x:=2:ℤmod[5];
	return x pun uint[4]; /// error
}
